--- a/pj-oop/nbproject/private/private.properties
+++ b/pj-oop/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Pavaree\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\lnwka\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
