edit icon and front

--- a/pj-oop/nbproject/project.properties
+++ b/pj-oop/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/pj-oop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20190722.jar=C:\\Users\\lnwka\\Downloads\\jar_files\\json-20190722.jar
+file.reference.json-20190722.jar=C:\\Users\\Pavaree\\Desktop\\json-20190722.jar
 includes=**
 jar.compress=false
 javac.classpath=\
