--- a/pj-oop/nbproject/project.properties
+++ b/pj-oop/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/pj-oop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20190722.jar=C:\\Users\\Pavaree\\Desktop\\json-20190722.jar
+file.reference.json-20190722.jar-1=jar_files/json-20190722.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.json-20190722.jar}
+    ${file.reference.json-20190722.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
