--- a/pj-oop/nbproject/private/private.properties
+++ b/pj-oop/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\lnwka\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\THE BEGINS\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
