--- a/pj-oop/nbproject/private/private.properties
+++ b/pj-oop/nbproject/private/private.properties
@@ -5,4 +5,4 @@ javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Soipachara\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 user.properties.file=C:\\Users\\Pavaree\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\Rattasit Sangwanpet\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Pavaree\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
